Fix cover size on firefox

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -74,9 +74,9 @@ h1 {
 }
 
 .item img {
-    max-width: 100%;
+    width: 100%;
     aspect-ratio: 1 / 1;
-    /* max-height: 30%; */
+    object-fit: cover;
 }
 
 #tracks-list {
